adding a line colour less variable generator

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -1,8 +1,10 @@
 @import "../bower_components/bootstrap/less/bootstrap.less";
+@import "lineVars.less";
 
 body {
   padding-top: 80px;
 }
+
 
 .signage {
   width: inherit;
