changed highlight syntax to stars

--- a/layouts/station.html
+++ b/layouts/station.html
@@ -1,10 +1,7 @@
 <%= _head %>
 <%= _nav %>
 <% _ = grunt.util._ %>
-<% grunt.log.write("  station layout "+meta.id+"... ") %>
-<% if(meta.id==="G2") {%>
-<%   debugger %>
-<% } %>
+<% grunt.verbose.write("  station layout "+meta.id+"... ") %>
 <div class="container-fluid">
   <div class="row-fluid">
     <div id="sidebar1" class="span4">
