stationn generator logs in non-verbose mode

--- a/layouts/station.html
+++ b/layouts/station.html
@@ -1,7 +1,7 @@
 <%= _head %>
 <%= _nav %>
 <% _ = grunt.util._ %>
-<% grunt.verbose.write("  station layout "+meta.id+"... ") %>
+<% grunt.log.write("  station layout "+meta.id+"... ") %>
 <div class="container-fluid">
   <div class="row-fluid">
     <div id="sidebar1" class="span4">
