new logo and prior/later links

--- a/layouts/_nav.html
+++ b/layouts/_nav.html
@@ -11,12 +11,14 @@
       </a>
 
       <!-- Be sure to leave the brand out there if you want it shown -->
-      <a class="brand" href="<%=root%>/index.html"><img src="<%=root%>/images/cmep-logo.png" style="height:30px;padding:0px 5px 0px 0px"/>CMEP Tube</a>
+      <a class="brand" href="<%=root%>/index.html"><img src="<%=root%>/images/cmep-logo3.png" style="height:20px;padding:0px 5px 0px 0px"/>Cambridge Mathematics</a>
 
       <!-- Everything you want hidden at 940px or less, place within here -->
       <div class="nav-collapse collapse">
         <!-- .nav, .navbar-search, .navbar-form, etc -->
         <ul class="nav">
+          <li><a href="<%=root%>/guides/students.html">Student Guide</a></li>
+          <li><a href="<%=root%>/guides/teachers.html">Teacher Guide</a></li>
           <!--
           <li class="active"><a href="/">Home</a></li>
           <li><a href="#">Map</a></li>
@@ -40,7 +42,6 @@
           <form class="navbar-search pull-left" action="">
             <input type="text" class="search-query span2" placeholder="Search">
           </form>
-          -->
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Introductions <b class="caret"></b></a>
             <ul class="dropdown-menu">
@@ -48,6 +49,7 @@
               <li><a href="<%=root%>/guides/teachers.html">for Teachers</a></li>
             </ul>
           </li>
+          -->
         </ul>
       </div>
     </div>
