--- a/layouts/resource.html
+++ b/layouts/resource.html
@@ -53,6 +53,28 @@
 <%   }); %>
       </ul>
 
+<% if(content.sidebar.priorMetas) { %>
+      <h3>Look back</h3>
+      <ul class="unstyled priors">
+<%   _.each(content.sidebar.priorMetas, function(priorMeta) { %>
+        <li>
+          <span class="<%= priorMeta.rtMeta.icon%>"></span> <a href="../<%= priorMeta.id %>/index.html"><%= priorMeta.rtMeta.title%></a>
+        </li>
+<%   }); %>
+      </ul>
+<% }%>
+
+<% if(content.sidebar.laterMetas) { %>
+      <h3>Look forwards</h3>
+      <ul class="unstyled laters">
+<%   _.each(content.sidebar.laterMetas, function(laterMeta) { %>
+        <li>
+          <span class="<%= laterMeta.rtMeta.icon%>"></span> <a href="../<%= laterMeta.id %>/index.html"><%= laterMeta.rtMeta.title%></a>
+        </li>
+<%   }); %>
+      </ul>
+<% }%>
+
 <% } %>
     </div>
 
