starting pervasiveIdeas layout

--- a/layouts/_foot.html
+++ b/layouts/_foot.html
@@ -11,24 +11,24 @@
   s.parentNode.insertBefore(g,s)}(document,'script'));
 </script>
 
-<!-- build:js  <%=root%>/scripts/main.js -->
-<script src="<%=root%>/scripts/main.js"></script>
+<!-- build:js  <%=rootUrl%>/scripts/main.js -->
+<script src="<%=rootUrl%>/scripts/main.js"></script>
 <!-- endbuild -->
 
-<!-- build:js <%=root%>/scripts/vendor/bootstrap.js -->
-<script src="<%=root%>/bower_components/bootstrap/js/bootstrap-affix.js"></script>
-<script src="<%=root%>/bower_components/bootstrap/js/bootstrap-alert.js"></script>
-<script src="<%=root%>/bower_components/bootstrap/js/bootstrap-dropdown.js"></script>
-<script src="<%=root%>/bower_components/bootstrap/js/bootstrap-tooltip.js"></script>
-<script src="<%=root%>/bower_components/bootstrap/js/bootstrap-modal.js"></script>
-<script src="<%=root%>/bower_components/bootstrap/js/bootstrap-transition.js"></script>
-<script src="<%=root%>/bower_components/bootstrap/js/bootstrap-button.js"></script>
-<script src="<%=root%>/bower_components/bootstrap/js/bootstrap-popover.js"></script>
-<script src="<%=root%>/bower_components/bootstrap/js/bootstrap-typeahead.js"></script>
-<script src="<%=root%>/bower_components/bootstrap/js/bootstrap-carousel.js"></script>
-<script src="<%=root%>/bower_components/bootstrap/js/bootstrap-scrollspy.js"></script>
-<script src="<%=root%>/bower_components/bootstrap/js/bootstrap-collapse.js"></script>
-<script src="<%=root%>/bower_components/bootstrap/js/bootstrap-tab.js"></script>
+<!-- build:js <%=rootUrl%>/scripts/vendor/bootstrap.js -->
+<script src="<%=rootUrl%>/bower_components/bootstrap/js/bootstrap-affix.js"></script>
+<script src="<%=rootUrl%>/bower_components/bootstrap/js/bootstrap-alert.js"></script>
+<script src="<%=rootUrl%>/bower_components/bootstrap/js/bootstrap-dropdown.js"></script>
+<script src="<%=rootUrl%>/bower_components/bootstrap/js/bootstrap-tooltip.js"></script>
+<script src="<%=rootUrl%>/bower_components/bootstrap/js/bootstrap-modal.js"></script>
+<script src="<%=rootUrl%>/bower_components/bootstrap/js/bootstrap-transition.js"></script>
+<script src="<%=rootUrl%>/bower_components/bootstrap/js/bootstrap-button.js"></script>
+<script src="<%=rootUrl%>/bower_components/bootstrap/js/bootstrap-popover.js"></script>
+<script src="<%=rootUrl%>/bower_components/bootstrap/js/bootstrap-typeahead.js"></script>
+<script src="<%=rootUrl%>/bower_components/bootstrap/js/bootstrap-carousel.js"></script>
+<script src="<%=rootUrl%>/bower_components/bootstrap/js/bootstrap-scrollspy.js"></script>
+<script src="<%=rootUrl%>/bower_components/bootstrap/js/bootstrap-collapse.js"></script>
+<script src="<%=rootUrl%>/bower_components/bootstrap/js/bootstrap-tab.js"></script>
 <!-- endbuild -->
 
 </body>
