--- a/layouts/_head.html
+++ b/layouts/_head.html
@@ -9,11 +9,11 @@
   <title></title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width">
-  <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-  <link rel="stylesheet" href="<%=root%>/styles/main.css">
-  <!-- build:js <%=root%>/scripts/vendor/modernizr.js -->
-  <script src="<%=root%>/bower_components/jquery/jquery.js"></script>
-  <script src="<%=root%>/bower_components/modernizr/modernizr.js"></script>
+  <!-- Place favicon.ico and apple-touch-icon.png in the rootUrl directory -->
+  <link rel="stylesheet" href="<%=rootUrl%>/styles/main.css">
+  <!-- build:js <%=rootUrl%>/scripts/vendor/modernizr.js -->
+  <script src="<%=rootUrl%>/bower_components/jquery/jquery.js"></script>
+  <script src="<%=rootUrl%>/bower_components/modernizr/modernizr.js"></script>
   <!-- endbuild -->
   <script type="text/x-mathjax-config">
     MathJax.Hub.Config({
