--- a/layouts/_linesMenu.html
+++ b/layouts/_linesMenu.html
@@ -15,7 +15,7 @@
 
 <%    _.each(m.stids, function(id) { %>
           <li>
-            <a href="<%=root%>/stations/<%=id%>.html">
+            <a href="<%=rootUrl%>/stations/<%=id%>.html">
               <%=id%>: <%=sources.stations[id].meta.title%>
             </a>
           </li>
