--- a/layouts/_nav.html
+++ b/layouts/_nav.html
@@ -11,14 +11,14 @@
       </a>
 
       <!-- Be sure to leave the brand out there if you want it shown -->
-      <a class="brand" href="<%=root%>/index.html"><img src="<%=root%>/images/cmep-logo3.png" style="height:20px;padding:0px 5px 0px 0px"/>Cambridge Mathematics</a>
+      <a class="brand" href="<%=rootUrl%>/index.html"><img src="<%=rootUrl%>/images/cmep-logo3.png" style="height:20px;padding:0px 5px 0px 0px"/>Cambridge Mathematics</a>
 
       <!-- Everything you want hidden at 940px or less, place within here -->
       <div class="nav-collapse collapse">
         <!-- .nav, .navbar-search, .navbar-form, etc -->
         <ul class="nav">
-          <li><a href="<%=root%>/guides/students.html">Student Guide</a></li>
-          <li><a href="<%=root%>/guides/teachers.html">Teacher Guide</a></li>
+          <li><a href="<%=rootUrl%>/guides/students.html">Student Guide</a></li>
+          <li><a href="<%=rootUrl%>/guides/teachers.html">Teacher Guide</a></li>
           <!--
           <li class="active"><a href="/">Home</a></li>
           <li><a href="#">Map</a></li>
@@ -28,9 +28,9 @@
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Resources <b class="caret"></b></a>
             <ul class="dropdown-menu">
-              <li><a href="<%=resources%>/G2_RT2/index.html">G2_RT2</a></li>
-              <li><a href="<%=resources%>/G2_RT3/index.html">G2_RT3</a></li>
-              <li><a href="<%=resources%>/G2_RT7/index.html">G2_RT7</a></li>
+              <li><a href="<%=resourcesUrl%>/G2_RT2/index.html">G2_RT2</a></li>
+              <li><a href="<%=resourcesUrl%>/G2_RT3/index.html">G2_RT3</a></li>
+              <li><a href="<%=resourcesUrl%>/G2_RT7/index.html">G2_RT7</a></li>
               <li class="divider"></li>
               <li class="nav-header">Nav header</li>
               <li><a href="#">Separated link</a></li>
@@ -45,8 +45,8 @@
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Introductions <b class="caret"></b></a>
             <ul class="dropdown-menu">
-              <li><a href="<%=root%>/guides/students.html">for Students</a></li>
-              <li><a href="<%=root%>/guides/teachers.html">for Teachers</a></li>
+              <li><a href="<%=rootUrl%>/guides/students.html">for Students</a></li>
+              <li><a href="<%=rootUrl%>/guides/teachers.html">for Teachers</a></li>
             </ul>
           </li>
           -->
