--- a/layouts/resource.html
+++ b/layouts/resource.html
@@ -35,7 +35,7 @@
       </div>
     </div>
 
-    <div id="sidebar1" class="offset1 span3">
+    <div id="sidebar" class="offset1 span3">
 <% if(content.sidebar) { %>
       <h3>Relevance</h3>
 
