--- a/layouts/pervasiveIdea.html
+++ b/layouts/pervasiveIdea.html
@@ -7,11 +7,11 @@
   <div class="row-fluid">
 
 
-    <div id="sidebar" class="span4">
+    <div id="sidebar" class="offset1 span3">
       <%= _piMenu %>   
     </div>
 
-    <div id="main" class="pervasive-idea main <%=meta.articles? 'offset1 span4' : 'offset1 span7'%>">
+    <div id="main" class="pervasive-idea main <%=meta.articles? 'span4' : 'span7'%>">
       <h1>
         <%= content.title %>
       </h1>
