pi layout twesk

--- a/layouts/pervasiveIdea.html
+++ b/layouts/pervasiveIdea.html
@@ -7,7 +7,7 @@
   <div class="row-fluid">
 
 
-    <div id="sidebar" class="offset1 span3">
+    <div id="sidebar" class="span3">
       <%= _piMenu %>   
     </div>
 
