--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -112,4 +112,15 @@ a.highlight {
   height:2000px;
 }
 
+.chalk {
+  font-family: "Chalkboard", "Comic Sans MS", sans-serif;
+  opacity:0.8;
+  font-size:1.2em;
+  color: orange;
+  max-width: 300px;
+  padding:20px;
+  border-radius: 20px;
+  border: 3px dotted orange;
+}
+
 
