--- a/layouts/_nav.html
+++ b/layouts/_nav.html
@@ -17,8 +17,8 @@
       <div class="nav-collapse collapse">
         <!-- .nav, .navbar-search, .navbar-form, etc -->
         <ul class="nav">
-          <li><a href="<%=rootUrl%>/guides/students.html">Student Guide</a></li>
-          <li><a href="<%=rootUrl%>/guides/teachers.html">Teacher Guide</a></li>
+          <li><a href="<%=rootUrl%>/map.html">Tube Map</a></li>
+          <li><a href="<%=rootUrl%>/pervasiveIdeasHome.html">Pervasive Ideas</a></li>
           <!--
           <li class="active"><a href="/">Home</a></li>
           <li><a href="#">Map</a></li>
