home page tube map thumbnail link fix

--- a/layouts/home.html
+++ b/layouts/home.html
@@ -6,8 +6,8 @@
 <div class="container fluid-row">
 
   <div class="span4">
-    <a href="images/tubemap.svg" >
-      <img src="images/tubemap.svg" alt="Link to tube map" title="The tube map">
+    <a href="./map.html" >
+      <img src="./images/tubemap.svg" alt="Link to tube map" title="The tube map">
     </a>
   </div>
   <div class="offset1 span6">
