--- a/layouts/home.html
+++ b/layouts/home.html
@@ -6,6 +6,16 @@
 <div class="container fluid-row">
 
   <div class="span4">
+<% var samp = grunt.config.get("yeoman.samples") %>
+<% var sour = grunt.config.get("yeoman.sources") %>
+<% if(sour === samp) { %>
+      <!-- add samples alert -->
+      <div class="alert">
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
+        <h2>Sample content</h2>
+        <span class="icon-info-sign"></span> See the <a href="https://github.com/CMEPorg/CMEP-site">Site readme</a> and the <a href="https://github.com/CMEPorg/CMEP-sources">Sources readme</a>.
+      </div>
+<% } %>
     <a href="./map.html" >
       <img src="./images/tubemap.svg" alt="Link to tube map" title="The tube map">
     </a>
