I keep fixing this same error!!! grr!

--- a/layouts/home.html
+++ b/layouts/home.html
@@ -17,7 +17,7 @@
       </div>
 <% } %>
     <a href="./map.html" >
-      <img src="./images/tubemap.svg" alt="Link to tube map" title="The tube map">
+      <img src="./images/tubeMap.svg" alt="Link to tube map" title="The tube map">
     </a>
   </div>
   <div class="offset1 span6">
