highlight icon changed

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -95,13 +95,13 @@ body {
  */
 @import "lines.less";
 
-
-.icon-heart {
+.maybe {
   opacity: 0;
 }
-.icon-heart.highlight {
+.maybe.highlight {
   opacity: 1;
-  color:red;
+  color: orange;
+  font-weight: bold
 }
 a.highlight {
   font-weight: bold;
