--- a/layouts/pervasiveIdea.html
+++ b/layouts/pervasiveIdea.html
@@ -39,7 +39,7 @@
             <li>
               <span class="icon-heart <%= resObj.highlight? 'highlight' : ''%>"></span>
               <span class="<%= rType.icon %>"></span> 
-              <a href="<%= resourcesUrl %>/resources/<%= resObj.id %>/index.html"><%= rType.title %></a>
+              <a href="<%= resourcesUrl %>/<%= resObj.id %>/index.html"><%= rType.title %></a>
             </li>
 <%     }); %>
           </ul>
