--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -117,8 +117,8 @@ a.highlight {
   opacity:0.8;
   font-size:1.2em;
   color: orange;
-  max-width: 300px;
   padding:20px;
+  margin-bottom: 5px;
   border-radius: 20px;
   border: 3px dotted orange;
 }
