added hr styling

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -123,4 +123,23 @@ a.highlight {
   border: 3px dotted orange;
 }
 
+hr {
+    margin: 25px auto -0px;
+    width: 70%;
+    border: none;
+    border-top: thick double #AAAAAA;
+    text-align: center;
+}
+hr:after {
+    content: "§";
+    color: #AAAAAA;
+    display: inline-block;
+    position: relative;
+    top: -1em;
+    font-size: 1.2em;
+    padding: 0.25em;
+    background: white;
+}
+
+
 
