--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -141,5 +141,16 @@ hr:after {
     background: white;
 }
 
+figure .image {
+    width: 100%;
+}
+
+figure {
+    text-align: center;
+    display: table;
+    max-width: 50%; /* demo; set some amount (px or %) if you can */
+    margin: 10px auto; /* not needed unless you want centered */
+}
+
 
 
