added desperate snippets to contributors guide

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -148,8 +148,8 @@ figure .image {
 figure {
     text-align: center;
     display: table;
-    max-width: 50%; /* demo; set some amount (px or %) if you can */
-    margin: 10px auto; /* not needed unless you want centered */
+    max-width: 50%; 
+    margin: 10px auto;
 }
 
 
