--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -124,24 +124,25 @@ a.highlight {
 }
 
 hr {
-    margin: 25px auto -0px;
+    margin: 2em auto 2ex;
     width: 70%;
     border: none;
     border-top: thick double #AAAAAA;
     text-align: center;
+    page-break-after:always;
 }
 hr:after {
-    content: "§";
+    content: " ∞ ";
     color: #AAAAAA;
     display: inline-block;
     position: relative;
-    top: -1em;
+    top: -0.9em;
     font-size: 1.2em;
-    padding: 0.25em;
+    padding: 0em 1em;
     background: white;
 }
 
-figure .image {
+figure img {
     width: 100%;
 }
 
@@ -151,6 +152,3 @@ figure {
     max-width: 50%; 
     margin: 10px auto;
 }
-
-
-
