--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -112,6 +112,12 @@ a.highlight {
   height:2000px;
 }
 
+.desmos6 {
+  border:none;
+  width:600px;
+  height:600px;
+}
+
 .chalk {
   font-family: "Chalkboard", "Comic Sans MS", sans-serif;
   opacity:0.8;
