--- a/layouts/map.html
+++ b/layouts/map.html
@@ -8,7 +8,7 @@
       <h1><%= meta.title %></h1>
       <%= _linesMenu %>
     </div>
-    <div id="content" class="span8">
+    <div id="content" class="span8 home">
       <%= content %>
     </div>
   </div>
