added some figure growing css

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -153,6 +153,20 @@ figure {
     margin: 10px auto;
 }
 
+.grow1 figure {
+  max-width: 50%;
+}
+.grow2 figure {
+  max-width: 67%;
+}
+.grow3 figure {
+  max-width: 83%;
+}
+.grow4 figure {
+  max-width: 100%;
+}
+
+
 .home figure {
   max-width: 100%;
 }
