--- a/layouts/renderQuestion.html
+++ b/layouts/renderQuestion.html
@@ -4,7 +4,7 @@
         <ul class="nav nav-pills">
 <%   _.each(content, function(cdata, index) { %>
           <li <%=index==0?'class="active"':''%>>
-            <a href="#tab<%=index%>" data-toggle="tab">
+            <a href="#tab<%=cdata.fileMeta.id%>_<%=index%>" data-toggle="tab">
               <%= cdata.alias %>
             </a>
           </li>
@@ -14,10 +14,9 @@
       
         <div class="tab-content">
 <%   _.each(content, function(cdata, index) { %>
-          <div class="tab-pane <%=index==0?'active':''%>" id="tab<%=index%>">
-            <%= cdata.html%>
+          <div class="tab-pane <%=index==0?'active':''%>" id="tab<%=cdata.fileMeta.id%>_<%=index%>">
+              <%= cdata.html%>
           </div>
 <%   }); %>
         </div>
       </div>
-    </div>
