fixed tubemap css for safari

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -149,12 +149,13 @@ hr:after {
 }
 
 figure img {
+    display:inline-block;
     width: 100%;
 }
 
 figure {
     text-align: center;
-    display: table;
+    display: inline-block;
     max-width: 50%; 
     margin: 10px auto;
 }
