testing tubeMap without the Functions line

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -178,6 +178,10 @@ figure {
   max-width: 100%;
 }
 
+thead {
+  border-bottom: 1px solid black;
+}
+
 /* pandoc generated tables */
 tr.odd {
   background-color: #f9f9f9;
