change eq acks and fixed silly R1s deletion

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -187,4 +187,11 @@ tr.odd {
   background-color: #f9f9f9;
 }
 
+.eq-ack {
+  font-size: @baseFontSize * .846;
+}
+
+.eq-separator {
+  height: 40px;
+}
 
