new fenman-all etc. publication scripts. Removed  stids2 in stations. Removed pagebreak on <hr>.

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -135,7 +135,7 @@ hr {
     border: none;
     border-top: thick double #AAAAAA;
     text-align: center;
-    page-break-after:always;
+    /* page-break-after:always; */
 }
 hr:after {
     content: " ∞ ";
