first pass resourceTypes listing

--- a/layouts/_nav.html
+++ b/layouts/_nav.html
@@ -19,37 +19,7 @@
         <ul class="nav">
           <li><a href="<%=rootUrl%>/map.html">Tube Map</a></li>
           <li><a href="<%=rootUrl%>/pervasiveIdeasHome.html">Pervasive Ideas</a></li>
-          <!--
-          <li class="active"><a href="/">Home</a></li>
-          <li><a href="#">Map</a></li>
-          <li class="divider-vertical"></li>
-          -->
-          <!--
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Resources <b class="caret"></b></a>
-            <ul class="dropdown-menu">
-              <li><a href="<%=resourcesUrl%>/G2_RT2/index.html">G2_RT2</a></li>
-              <li><a href="<%=resourcesUrl%>/G2_RT3/index.html">G2_RT3</a></li>
-              <li><a href="<%=resourcesUrl%>/G2_RT7/index.html">G2_RT7</a></li>
-              <li class="divider"></li>
-              <li class="nav-header">Nav header</li>
-              <li><a href="#">Separated link</a></li>
-              <li><a href="#">One more separated link</a></li>
-            </ul>
-          </li>
-          -->
-          <!--
-          <form class="navbar-search pull-left" action="">
-            <input type="text" class="search-query span2" placeholder="Search">
-          </form>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Introductions <b class="caret"></b></a>
-            <ul class="dropdown-menu">
-              <li><a href="<%=rootUrl%>/guides/students.html">for Students</a></li>
-              <li><a href="<%=rootUrl%>/guides/teachers.html">for Teachers</a></li>
-            </ul>
-          </li>
-          -->
+          <li><a href="<%=rootUrl%>/resourceTypesHome.html">Resource Types</a></li>
         </ul>
       </div>
     </div>
