deleted RT10 Classic and lost rt id from RT home

--- a/layouts/resourceTypesHome.html
+++ b/layouts/resourceTypesHome.html
@@ -18,9 +18,7 @@
   m = data.meta
 %>
         <li>
-          <span class="<%=m.icon%>"></span>
-          <%= m.id %>
-          <%= m.title %>
+          <span class="<%=m.icon%>"></span> <%= m.title %>
         </li>
 
 <% }) %>
