--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -124,7 +124,7 @@ a.highlight {
   font-size:1.2em;
   color: orange;
   padding:20px;
-  margin-bottom: 5px;
+  margin: 5px 0px;
   border-radius: 20px;
   border: 3px dotted orange;
 }
