--- a/layouts/pervasiveIdea.html
+++ b/layouts/pervasiveIdea.html
@@ -24,7 +24,7 @@
 <%     _.each(meta.R1s, function(resObj) { %>
 <%       rType = resourceTypes[resObj.rt].meta; %>
             <li>
-              <span class="maybe icon-star<%= resObj.highlight? 'highlight' : ''%>"></span>
+              <span class="maybe icon-thumbs-up<%= resObj.highlight? 'highlight' : ''%>"></span>
               <span class="<%= rType.icon %>"></span> 
               <a href="<%= resourcesUrl %>/<%= resObj.id %>/index.html"><%= rType.title %></a>
             </li>
