increased margin for ordered lists, overriding bootstrap default

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -5,6 +5,10 @@ body {
   padding-top: 80px;
 }
 
+ol {
+  margin: 0 0 @baseLineHeight / 2 3em;
+}
+
 @media (max-width: 767px) {
   #sidebar1 {
     position: static;
